--- a/changelog.txt
+++ b/changelog.txt
@@ -1,6 +1,6 @@
 ---------------------------------------------------------------------------------------------------
 Version: 1.0.10
-Date: ????
+Date: 2025-08-08
   Changes:
     - Added LICENCE file
 ---------------------------------------------------------------------------------------------------
