--- a/changelog.txt
+++ b/changelog.txt
@@ -2,6 +2,7 @@
 Version: 1.0.11
 Date: ????
   Changes:
+    - Updated long description
 ---------------------------------------------------------------------------------------------------
 Version: 1.0.10
 Date: 2025-08-08
